[tool.poetry]
name = "test"
description = "test"
authors = ["Sauron"]
readme = "README.md"
version = "0.1.0"


[tool.poetry.dependencies]
python = "^3.7.0"
boto3 = "1.17.105"


[tool.poetry.dev-dependencies]
pytest = "^5.0.1"

[build-system]
requires = ["poetry>=1.0.9"]
build-backend = "poetry.masonry.api"